<resources>
    <string name="app_name">VdoTokChat</string>
    <string name="userNameHint">Name</string>
    <string name="userName">Username</string>
    <string name="userNameEmailHint">Username / Email</string>
    <string name="userEmailHint">Email Address</string>
    <string name="email">Email</string>
    <string name="passwordHint">Password</string>
    <string name="password">Password</string>
    <string name="Login">Sign In </string>
    <string name="Signup">Sign Up </string>
    <string name="createGroupText">Create Group Chat</string>
    <string name="register">Register </string>
    <string name="start">Start </string>
    <string name="user_initial">KM</string>
    <string name="file_size">File size should be less than 6MB</string>
    <string name="edit_group">Edit Group Name</string>
    <string name="delete">Delete</string>
    <string name="group_deleted">Group Delete</string>
    <string name="chat_room">Chat Rooms</string>
    <string name="online">Online</string>
    <string name="offline">Offline</string>
    <string name="typeMessage">Type your message</string>
    <string name="no_network_available">No network available!</string>
    <string name="status">Status</string>
    <string name="misread_message">Misread messages</string>
    <string name="no_user_select">No User Selected</string>
    <string name="Vdotok">Vdotok</string>
    <string name="confirm">Confirm</string>
    <string name="read">Read</string>
    <string name="read_count">Read %s</string>
    <string name="video_file">Video File</string>
    <string name="doc_file">Document File</string>
    <string name="audio_file">Audio File</string>
    <string name="invalid_email">Invalid Email Address</string>
    <string name="invalid_username">Invalid Username Credential</string>
    <string name="invalid_password">Invalid Password Credential</string>
    <string name="create_group">Create group</string>
    <string name="group_created">Group created success</string>
    <string name="add_group_title">Add Group Title</string>
    <string name="hint_search_bar">Search</string>
    <string name="hint_chat_text_field">Type a Message</string>
    <string name="welcome_back">Welcome Back!</string>
    <string name="login_text">Login with username and password.</string>
    <string name="register_text">Register with username and password.</string>
    <string name="create_user">Create a user</string>
    <string name="name_group_chat">Name your group chat</string>
    <string name="group_name_hint">ex: Vdotok Team</string>
    <string name="done">Done</string>
    <string name="register_user">Register user</string>
    <string name="account_created_success">Account Created!</string>
    <string name="user_count">%1$d contacts</string>
    <string name="group_name_empty">Group name cannot be empty!</string>
    <string name="new_chat">New Chat</string>
    <string name="refresh">refresh</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="cancel">Cancel</string>
    <string name="delete_group">Are you sure you want to delete the chatroom?</string>
    <string name="log_out">log out</string>
    <string name="no_conversation_yet">No Conversation Yet</string>
    <string name="no_conversation_detail">Tap and hold on any message\nto star it, so you can easily find it later.</string>
    <string name="contacts">Contacts</string>
    <string name="sign_up_to_your_account">Sign Up</string>
    <string name="select_contact">Select Contact</string>
    <string name="blank" />
    <string name="no_internet">No Internet Connection</string>
    <string name="api_url_empty">Kindly scan the qr code / Enter Credentials of Project</string>


    <string name="in_progress">In progress!</string>
    <string name="attachment_failed">Attachment received failed</string>
    <string name="sdk_connected">SDK Connected!</string>

    <!--    image descriptions-->
    <string name="description_attachment">image for attachment menu</string>
    <string name="attachment">Attachment</string>
    <string name="description_open_camera">image to open camera</string>
    <string name="description_emoji_keyboard">image to enable emoji keyboard</string>
    <string name="description_back_button">image back button</string>
    <string name="description_msg_sent_success">image message sent</string>
    <string name="chat_icon">chat_icon</string>
    <string name="group_icon">group_icon</string>
    <string name="add_group_chat">Add Group Chat</string>
    <string name="is_typing">&#160; is typing…</string>
    <string name="no_user_found">No User Found</string>
    <string name="participant_limit_error">You can create groups with four participants only</string>

</resources>