<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">
    <data>
        <variable
            name="userEmail"
            type="androidx.databinding.ObservableField&lt;String&gt;" />
        <variable
            name="fullName"
            type="androidx.databinding.ObservableField&lt;String&gt;" />
        <variable
            name="password"
            type="androidx.databinding.ObservableField&lt;String&gt;" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@drawable/ic_account_gradient_bg">

        <androidx.appcompat.widget.AppCompatImageView
            android:id="@+id/logoView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="30dp"
            android:padding="10dp"
            android:src="@drawable/logo_main"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <androidx.cardview.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:cardCornerRadius="20dp"
            android:layout_margin="20dp"
            android:orientation="vertical"
            android:clickable="true"
            android:focusable="true"
            android:background="@color/white"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/logoView">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:id="@+id/groupView"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginTop="10dp"
                android:layout_marginBottom="36dp"
                android:layout_marginStart="10dp"
                android:layout_marginEnd="10dp"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/tv_signText"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/sign_up_to_your_account"
                    style="@style/Theme_TextView"
                    android:layout_marginTop="32dp"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintEnd_toEndOf="parent" />

                <EditText
                    android:id="@+id/edt_userName"
                    android:layout_width="match_parent"
                    android:layout_height="54dp"
                    style="@style/Theme_EditText"
                    android:hint="@string/userName"
                    android:text="@={fullName}"
                    android:layout_marginTop="38dp"
                    android:layout_marginBottom="16dp"
                    app:layout_constraintTop_toBottomOf="@+id/tv_signText"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    android:importantForAutofill="no"
                    android:inputType="textPersonName"
                    tools:text="Khizzar Shyk"/>

                <EditText
                    android:id="@+id/edt_email"
                    style="@style/Theme_EditText"
                    android:layout_width="match_parent"
                    android:layout_height="54dp"
                    android:layout_marginTop="16dp"
                    android:hint="@string/userEmailHint"
                    android:importantForAutofill="no"
                    android:inputType="textEmailAddress"
                    android:text="@={userEmail}"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/edt_userName" />
                <EditText
                    android:id="@+id/edt_password"
                    android:layout_width="match_parent"
                    android:layout_height="54dp"
                    style="@style/Theme_EditText"
                    android:hint="@string/passwordHint"
                    android:text="@={password}"
                    android:layout_marginTop="16dp"
                    android:layout_marginBottom="32dp"
                    android:maxLength="14"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/edt_email"
                    android:importantForAutofill="no"
                    android:inputType="textPassword"/>

                <Button
                    android:id="@+id/btn_sign_up"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    style="@style/Theme_Button_Activated"
                    android:layout_marginTop="80dp"
                    android:layout_marginStart="65dp"
                    android:layout_marginEnd="65dp"
                    android:background="@drawable/roundbutton"
                    android:text="@string/Signup"
                    app:layout_constraintTop_toBottomOf="@+id/edt_password"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintEnd_toEndOf="parent" />


                <TextView
                    android:id="@+id/tv_sign_in"
                    style="@style/Theme_Button_DeActivated"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:padding="10dp"
                    android:background="@color/white"
                    android:stateListAnimator="@null"
                    android:text="@string/Login"
                    android:textColor="@color/dark_indigo"
                    android:gravity="center"
                    android:layout_marginTop="38dp"
                    app:layout_constraintTop_toBottomOf="@+id/btn_sign_up"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintEnd_toEndOf="parent" />


            </androidx.constraintlayout.widget.ConstraintLayout>

        </androidx.cardview.widget.CardView>

        <ProgressBar
            android:id="@+id/progressBar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:visibility="gone"
            android:elevation="10dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>