<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>
        <variable
            name="search"
            type="androidx.databinding.ObservableField&lt;String&gt;" />
    </data>


    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/white"
        android:focusable="true"
        android:clickable="true">

        <include
            android:id="@+id/custom_toolbar"
            layout="@layout/custom_toolbar_all_users"/>

        <EditText
            android:id="@+id/search_edit_text"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            style="@style/Theme_search_view"
            android:text="@={search}"
            android:hint="@string/hint_search_bar"
            android:textAlignment="viewStart"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/custom_toolbar" />

        <TextView
            android:id="@+id/tv_groupChat"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            style="@style/Theme_TextView"
            android:textAlignment="viewStart"
            android:layout_gravity="center|start"
            android:text="@string/add_group_chat"
            android:drawableStart="@drawable/ic_group_chat_icon"
            android:drawablePadding="14dp"
            android:layout_marginTop="46dp"
            android:layout_marginStart="14dp"
            android:layout_marginBottom="16dp"
            android:textSize="16sp"
            android:textColor="@color/black_green"
            app:layout_constraintEnd_toEndOf="@id/search_edit_text"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/search_edit_text"
            />
        <View
            android:id="@+id/line1"
            android:layout_width="0dp"
            android:layout_height="0.5dp"
            android:background="@color/sea_green"
            android:layout_marginTop="16dp"
            app:layout_constraintTop_toBottomOf="@id/tv_groupChat"
            app:layout_constraintEnd_toEndOf="@id/search_edit_text"
            app:layout_constraintStart_toStartOf="@id/search_edit_text"/>

        <TextView
            android:id="@+id/tv_selectContact"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            style="@style/Theme_TextView"
            android:textAlignment="viewStart"
            android:layout_gravity="center|start"
            android:text="@string/contacts"
            android:layout_marginTop="22dp"
            android:layout_marginBottom="24dp"
            android:textSize="14sp"
            android:textColor="@color/indigo"
            app:layout_constraintEnd_toEndOf="@id/search_edit_text"
            app:layout_constraintStart_toStartOf="@id/search_edit_text"
            app:layout_constraintTop_toBottomOf="@+id/line1"
            />

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/rcvUserList"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:orientation="vertical"
            android:layout_marginStart="16dp"
            app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
            app:layout_constraintEnd_toEndOf="@id/search_edit_text"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tv_selectContact"
            />

        <View
            android:id="@+id/viewDisableLayout"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@color/grey1"
            android:clickable="true"
            android:focusable="true"
            android:visibility="gone"/>

        <ProgressBar
            android:id="@+id/progressBar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:visibility="gone"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />
        <TextView
            android:id="@+id/check"
            style="@style/Theme_TextView"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:text="@string/no_user_found"
            android:visibility="gone"
            android:gravity="center"
            app:layout_constraintEnd_toEndOf="@id/search_edit_text"
            app:layout_constraintStart_toStartOf="@id/search_edit_text"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tv_selectContact" />


    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>