<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <data>
        <variable
            name="groupName"
            type="androidx.databinding.ObservableField&lt;String&gt;" />
    </data>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center">

        <androidx.cardview.widget.CardView
            android:layout_width="350dp"
            android:layout_height="wrap_content"
            app:cardCornerRadius="10dp"
            app:cardElevation="1dp"
            android:layout_marginBottom="10dp"
            android:layout_marginTop="10dp"
            android:layout_centerInParent="true"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:minWidth="250dp"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/tv_group_name"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:gravity="start"
                    android:text="@string/add_group_title"
                    android:textSize="14sp"
                    android:fontFamily="@font/poppins_regular"
                    android:textStyle="bold"
                    android:textColor="@color/grayish_3"
                    android:layout_marginStart="24dp"
                    app:layout_constraintBottom_toBottomOf="@+id/img_close"
                    app:layout_constraintEnd_toStartOf="@+id/img_close"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="@+id/img_close" />

                <ImageView
                    android:id="@+id/img_close"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:src="@drawable/ic_close"
                    android:layout_marginTop="36dp"
                    android:layout_marginEnd="24dp"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <TextView
                    android:id="@+id/tv_create_group_heading"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/inter_regular_400"
                    android:gravity="start"
                    android:text="@string/name_group_chat"
                    android:textColor="@color/black_2"
                    android:textSize="14sp"
                    android:layout_marginTop="50dp"
                    app:layout_constraintEnd_toEndOf="@+id/img_close"
                    app:layout_constraintStart_toStartOf="@+id/tv_group_name"
                    app:layout_constraintTop_toBottomOf="@+id/tv_group_name" />

                <EditText
                    android:id="@+id/edt_group_name"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="16dp"
                    android:hint="@string/group_name_hint"
                    android:singleLine="true"
                    android:textSize="14sp"
                    android:text="@={groupName}"
                    android:textColor="@color/tile_green_dark"
                    android:textColorHint="@color/tile_green"
                    android:fontFamily="@font/poppins_regular"
                    android:background="@null"
                    app:layout_constraintEnd_toEndOf="@id/tv_create_group_heading"
                    app:layout_constraintStart_toStartOf="@id/tv_create_group_heading"
                    app:layout_constraintTop_toBottomOf="@id/tv_create_group_heading" />

                <View
                    android:id="@+id/view_divider"
                    android:layout_width="0dp"
                    android:layout_height="0.7dp"
                    android:background="@color/divider_color"
                    android:layout_marginTop="7dp"
                    app:layout_constraintTop_toBottomOf="@id/edt_group_name"
                    app:layout_constraintStart_toStartOf="@id/edt_group_name"
                    app:layout_constraintEnd_toEndOf="@id/edt_group_name"/>

                <Button
                    android:id="@+id/btn_done"
                    android:layout_width="196dp"
                    android:layout_height="wrap_content"
                    android:text="@string/done"
                    android:textAllCaps="true"
                    android:textColor="@color/indigo"
                    android:background="@drawable/roundbutton"
                    android:backgroundTint="@color/dark_yellow"
                    android:textSize="14sp"
                    android:fontFamily="@font/manrope_bold_700"
                    android:layout_marginTop="44dp"
                    android:layout_marginBottom="24dp"
                    app:layout_constraintTop_toBottomOf="@id/view_divider"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintStart_toStartOf="@id/view_divider"
                    app:layout_constraintEnd_toEndOf="@id/view_divider" />

                <ProgressBar
                    android:id="@+id/progressBar"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:elevation="10dp"
                    android:indeterminateTint="@color/black"
                    android:visibility="gone"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

            </androidx.constraintlayout.widget.ConstraintLayout>

        </androidx.cardview.widget.CardView>

    </RelativeLayout>


</layout>